# hackday-battleships

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  battleships.code-workspace  cloudshell.py  docker-compose.yaml  fixtures.json  pyproject.toml  settings.py  setup.cfg  shortcuts.sh
.cloudbuild/: build-migrate-deploy.yaml  deploy.yaml  migrate.sh
admirals-bridge/: package.json
admirals-bridge/public/: index.html
admirals-bridge/src/: App.js  Graph.jsx  GraphWrapper.jsx  api.js  hooks.js  index.css  rawData.js
admirals-bridge/src/stories/: 2-spectate.stories.js
cloudships/: admin.py  dispatcher.py  models.py  urls.py  views.py  wsgi.py
cloudships/migrations/: 0001_init.py  0001_initial.py  0002_add_player_state.py  0002_str_enum.py  0003_auto_20200508_1112.py  0003_gameset.py  0004_game_created_at.py
cloudships/templates/: index.html
cloudships/templates/admin/: start_game.html
dispatcher/: Dockerfile  index.js  package-lock.json  package.json
example_client/: main.py
example_client/.cloudbuild/: deploy.yaml
hottest100/: Dockerfile  README.md  app.py  config.py  engine.py  main.py  server.py
hottest100/.cloudbuild/: deploy.yaml
oh_ship!/: Dockerfile  main.py
oh_ship!/.cloudbuild/: deploy.yaml
terraform/: main.tf  variables.tf
terraform/database/: main.tf  variables.tf
terraform/permissions/: variables.tf
terraform/service/: variables.tf
the_carlsen_approach/: Dockerfile  main.py
the_carlsen_approach/.cloudbuild/: deploy.yaml
utils/: sm_helper.py
(+10 files in other folders)
