[tool.poetry]
name = "cloudships"
version = "0.1.0"
description = ""
authors = ["Alec McGavin <dev@mcgav.in>"]

[tool.poetry.dependencies]
python = "^3.8"
waitress = "^1.4.3"
google-cloud-secret-manager = "^0.2.0"
google-cloud-datastore = "^1.11.1"
django = "==3.0.4"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.5"
djangorestframework = "^3.11.0"
django-extensions = "^2.2.9"
whitenoise = "^5.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
flake8 = "^3.7.9"
mypy = "^0.770"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
